package.json: Add myself to contributors

--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "version": "1.0.1",
     "description": "A Fengari REPL that runs in a web page",
     "repository": "https://github.com/fengari-lua/fengari-web-cli.git",
-    "author": "Benoit Giannangeli <giann008@gmail.com>",
+    "contributors": [
+        "Benoit Giannangeli <giann008@gmail.com>",
+        "Daurnimator <quae@daurnimator.com>"
+    ],
     "license": "MIT",
     "dependencies": {
         "fengari": "fengari-lua/fengari",
