--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
         "fengari-interop": "fengari-lua/fengari-interop"
     },
     "devDependencies": {
-        "babili-webpack-plugin": "^0.1.2",
+        "babel-core": "^6.26.0",
+        "babel-loader": "^7.1.1",
+        "babel-preset-env": "^1.6.0",
         "webpack": "^3.5.5"
     },
     "scripts": {
