package.json: Add 'main' field so that other npm packages can require this one

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "Daurnimator <quae@daurnimator.com>"
     ],
     "license": "MIT",
+    "main": "src/fengari-web.js",
     "dependencies": {
         "fengari": "fengari-lua/fengari",
         "fengari-interop": "fengari-lua/fengari-interop"
