src/fengari-web.js: Don't monitor document if run from web worker

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslintConfig": {
         "env": {
             "browser": true,
+            "worker": true,
             "es6": true
         },
         "extends": "eslint:recommended",
