package.json: style

--- a/package.json
+++ b/package.json
@@ -63,14 +63,18 @@
                 "always"
             ]
         },
-        "overrides": [{
-            "files": ["webpack.config.js"],
-            "env": {
-                "node": true
-            },
-            "parserOptions": {
-                "sourceType": "script"
+        "overrides": [
+            {
+                "files": [
+                    "webpack.config.js"
+                ],
+                "env": {
+                    "node": true
+                },
+                "parserOptions": {
+                    "sourceType": "script"
+                }
             }
-        }]
+        ]
     }
 }
