--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     },
     "devDependencies": {
         "babel-core": "^6.26.0",
-        "babel-loader": "^7.1.1",
+        "babel-loader": "^7.1.4",
         "babel-preset-env": "^1.6.1",
         "eslint": "^4.13.0",
-        "webpack": "^3.10.0"
+        "webpack": "^4.2.0",
+        "webpack-cli": "^2.0.13"
     },
     "scripts": {
         "build": "webpack -p",
