--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
-language: node
+sudo: false
+dist: trusty
+language: node_js
+node_js:
+  - node
 
 cache: yarn
-
-install:
-  - yarn
 
 script:
   - yarn lint
