--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "homepage": "https://github.com/fengari-lua/fengari-web#readme",
     "main": "dist/fengari-web.bundle.js",
     "dependencies": {
-        "fengari": "^0.1",
+        "fengari": "^0.1.3",
         "fengari-interop": "^0.1"
     },
     "devDependencies": {
-        "babel-core": "^6.26.0",
-        "babel-loader": "^7.1.4",
-        "babel-preset-env": "^1.6.1",
-        "eslint": "^4.13.0",
-        "webpack": "^4.4.1",
-        "webpack-cli": "^2.0.13"
+        "@babel/core": "^7.1.5",
+        "@babel/preset-env": "^7.1.5",
+        "babel-loader": "^8.0.4",
+        "eslint": "^5.9.0",
+        "webpack": "^4.25.1",
+        "webpack-cli": "^3.1.2"
     },
     "scripts": {
         "build": "webpack -p",
